fixes x-axis overflow

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     justify-content: center;
     align-items: center;
     background-color: #F2EAE3;
@@ -24,7 +24,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .landingDescription {
@@ -41,7 +41,6 @@
     display: flex;
     /* flex-direction: column; */
     justify-content: center;
-    max-width: 900px;
     padding: 60px 0;
     align-items: center;
 }
@@ -160,7 +159,7 @@
 }
 
 .footer {
-    width: 100vw;
+    width: 100%;
     background-color: #ECE0D5;
     padding-top: 3rem;
     display: flex;
